# grewalcc

./: .gitignore  .gitmodules
.github/workflows/: authz-test.yml  build-backend.yaml  deploy-ansible-config.yaml  docker-publish-authz.yml  terraform.yml
ansible/: configure_vm.yml  htop_playbook.yml  inventory.ini
ansible/roles/authz_service/defaults/: main.yml
ansible/roles/authz_service/tasks/: main.yml
ansible/roles/authz_service/templates/: authz-service-grpc.hcl.j2  authz-service-http.hcl.j2  authz-service.hcl.j2  authz-service.service.j2
ansible/roles/consul/handlers/: main.yml
ansible/roles/consul/tasks/: main.yml
ansible/roles/consul/templates/: consul.hcl.j2  consul.service.j2
ansible/roles/envoy/defaults/: main.yml
ansible/roles/envoy/handlers/: main.yml
ansible/roles/envoy/tasks/: main.yml
ansible/roles/envoy/templates/: envoy.service.j2  envoy.yaml.j2
ansible/roles/grewal-backend/handlers/: main.yml
ansible/roles/grewal-backend/tasks/: main.yml
ansible/roles/grewal-backend/templates/: grewal-backend-service.hcl.j2  grewal-backend.service.j2
ansible/roles/node_exporter/tasks/: main.yml
ansible/roles/node_exporter/templates/: node_exporter.service.j2
ansible/roles/prometheus/tasks/: main.yml
ansible/roles/prometheus/templates/: prometheus.service.j2  prometheus.yml.j2
ansible/roles/redis/defaults/: main.yml
ansible/roles/redis/tasks/: main.yml
ansible/roles/redis/templates/: redis-service.hcl.j2
ansible/vars/: secrets.yml
certificates/: cert.pem  fullchain.pem  privkey.pem
certificates/live/grewal.cc/: README  cert.pem  dhparam.pem  fullchain.pem  privkey.pem  ssl-dhparams.pem
conf/: COMMANDS  envoy.yaml
conf/consul/: consul.hcl  grewal-backend.json
conf/systemd/: consul.service  envoy.service  grewal.service
db/: mysql_util.h
docker/: Dockerfile
docker/http/: Dockerfile
docker/https/: Dockerfile
frontend/: COMMANDS  Makefile  home_general.grpc.pb.cc  home_general.grpc.pb.h  home_general.pb.cc  home_general.pb.h  home_general.proto  home_general_grpc_web_pb.js  home_general_pb.js  home_general_service.cc  home_general_service.h  index.js  main.cc  package-lock.json  package.json  webpack.config.js
frontend/templates/: home_general.tpl
security/: security.cc  security.h  security_test.cc
services/security-service/: BUILD.bazel  CMakeLists.txt  WORKSPACE  vcpkg.json
services/security-service/go/: Dockerfile  go.mod  go.sum  main.go
services/security-service/go/authz/: grpc_server.go  service.go  service_test.go
services/security-service/go/pkg/genproto/envoy/annotations/: deprecation.pb.go
services/security-service/go/pkg/genproto/envoy/config/core/v3/: address.pb.go  backoff.pb.go  base.pb.go  extension.pb.go  http_uri.pb.go  socket_option.pb.go
services/security-service/go/pkg/genproto/envoy/service/auth/v3/: attribute_context.pb.go  external_auth.pb.go  external_auth_grpc.pb.go
services/security-service/go/pkg/genproto/envoy/type/v3/: http_status.pb.go  percent.pb.go  semantic_version.pb.go
services/security-service/go/pkg/genproto/google/protobuf/: any.pb.go  duration.pb.go  struct.pb.go  wrappers.pb.go
services/security-service/go/pkg/genproto/google/rpc/: status.pb.go
services/security-service/go/pkg/genproto/udpa/annotations/: migrate.pb.go  status.pb.go  versioning.pb.go
services/security-service/go/pkg/genproto/validate/: validate.pb.go
services/security-service/go/pkg/genproto/xds/annotations/v3/: status.pb.go
services/security-service/go/pkg/genproto/xds/core/v3/: context_params.pb.go
services/security-service/src/: main.cc
terraform/: firewall.tf  main.tf  provider.tf
